<?xml version="1.0"?>
<package>
  <name>onrobot_rg2_description</name>
  <version>0.0.1</version>
  <description>Stanley Innovation Onrobot rg2 Visual Models</description>
  <maintainer email="wx17866613161@163.com">Wan Xin</maintainer>
  <author>Wan Xin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


  <export>
  </export>
</package>
