<?xml version="1.0"?>
<package format="2">
  <name>onrobot_rg2_gazebo</name>
  <version>1.2.1</version>
  <description>
      Gazebo wrapper for the onrobot rg2 gripper.
  </description>


  <author email="nekanat.stock@gmail.com">neka-nat</author>
  <maintainer email="nekanat.stock@gmail.com">neka-nat</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/meshes" />
  </export>
</package>
